--- a/style/style.css
+++ b/style/style.css
@@ -1,9 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Roboto:wght@100;300;400;500;700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     text-decoration: none;
     list-style-type: none;
     box-sizing: border-box;
+    font-family: 'DM Serif Display';
+}
+
+::-webkit-scrollbar{
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #333;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #CDA274;
 }
 
 .header {
@@ -16,6 +33,7 @@
     justify-content: space-between;
     z-index: 100000;
     padding: 16px 10%;
+    background-color: #ffffff;
 }
 
 .header .logo {
@@ -45,7 +63,7 @@
 .header .navbar a {
     color: #292f36;
     font-size: 20px;
-    font-family: arial;
+    font-family: 'Jost';
     line-height: 125%;
     transition: 0.3s;
 }
@@ -63,4 +81,573 @@
 .header .navbar a.active:hover {
     color: #292f36;
     border-block: 2px solid #292f36;
+}
+
+
+.home-main-head {
+    width: 100%;
+    height: 740px;
+    padding-top: 70px;
+    border-radius: 0px 0px 0px 200px;
+    background-image: url(../img/home_1.png);
+    background-repeat: no-repeat;
+    background-size: 100% 740px;
+}
+
+.home-main-head img {
+    width: 100%;
+    height: 100%;
+}
+
+.home-head-text {
+    width: 567px;
+    position: relative;
+    top: 150px;
+    left: 200px;
+}
+
+.home-head-text .did {
+    font-size: 70px;
+    line-height: 125%;
+    margin-bottom: 20px;
+}
+
+.home-head-text .lil {
+    font-size: 22px;
+    line-height: 150%;
+    letter-spacing: 1%;
+    color: #4d5053;
+    margin-bottom: 10px;
+    font-family: 'jost';
+}
+
+.home-head-text .btn {
+    border: none;
+    color: #ffffff;
+    background-color: #292f36;
+    font-size: 16px;
+    font-family: 'Jost';
+    font-weight: semibold;
+    letter-spacing: 2%;
+    line-height: 125%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding: 15px 25px;
+    border-radius: 18px;
+    cursor: pointer;
+    transition: 0.3s linear;
+    width: 157px;
+}
+
+.home-head-text .btn:hover {
+    background-color: #4d5053;
+    transition: 0.3s linear;
+
+}
+
+.home-head-text .btn img {
+    width: 15.14px;
+    height: 13.18;
+    margin-left: 10px;
+}
+
+
+.home-work {
+    display: flex;
+    flex-direction: row;
+    width: 1200px;
+    justify-content: space-between;
+    margin: auto;
+    padding-block: 200px;
+}
+
+.work-text {
+    text-align: center;
+    width: 358px;
+}
+
+.work-text .work-did {
+    font-size: 25px;
+    line-height: 125%;
+    color: #292f36;
+    padding-bottom: 20px;
+}
+
+.work-text .work-lil {
+    font-size: 22px;
+    line-height: 150%;
+    letter-spacing: 1%;
+    font-family: 'Jost';
+    color: #4d5053;
+    padding-bottom: 50px;
+}
+
+.work-text a {
+    color: #4d5053;
+    font-size: 18px;
+    line-height: 125%;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    font-family: 'Jost';
+}
+
+.work-text a:hover {
+    color: #CDA274;
+}
+
+.work-text a img {
+    padding-left: 10px;
+}
+
+
+.about-us {
+    margin: auto;
+    width: 1200px;
+    height: 660px;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.about-us .about-us-img {
+    height: 660px;
+    border-radius: 0 300px 0 100px ;
+}
+
+.about-us .content {
+    padding-top: 40px;
+}
+
+.about-us .content .content-big {
+    font-size: 50px;
+    letter-spacing: 2%;
+    line-height: 125%;
+    color: #292f36;
+    padding-bottom: 33px;
+}
+
+.about-us .content .content-lil {
+    font-size: 22px;
+    font-family: 'Jost';
+    line-height: 150%;
+    letter-spacing: 1%;
+    color: #4d5053;
+    padding-bottom: 80px;
+}
+
+.about-us .content .number {
+    font-size: 22px;
+    font-family: arial;
+    letter-spacing: 1%;
+    line-height: 150%;
+    font-family: 'Jost';
+    font-weight: bold;
+    color: #4d5053;
+    height: 80px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    padding-bottom: 80px;
+}
+
+.about-us .content .number img {
+    position: absolute;
+    left: 0;
+    width: 80px;
+}
+
+.about-us .content .btn {
+    border: none;
+    color: #ffffff;
+    background-color: #292f36;
+    font-size: 16px;
+    font-family: 'Jost';
+    font-weight: semibold;
+    letter-spacing: 2%;
+    line-height: 125%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding: 15px 25px;
+    border-radius: 18px;
+    cursor: pointer;
+    transition: 0.3s linear;
+    width: 205px;
+}
+
+.about-us .content .btn:hover {
+    background-color: #4d5053;
+    transition: 0.3s linear;
+
+}
+
+.about-us .content .btn img {
+    width: 15.14px;
+    height: 13.18;
+    margin-left: 10px;
+}
+
+.testimonial {
+    background-color: #f4f0ec;
+    width: 1199px;
+    height: 660px;
+    border-radius: 70px;
+    margin: 200px auto;
+}
+
+.testimonial .testimonial-head {
+    font-size: 50px;
+    line-height: 125%;
+    letter-spacing: 2%;
+    text-align: center;
+    padding-top: 80px;
+    padding-bottom: 38px;
+}
+
+.testimonial .testimonials {
+    width: 1150px;
+    margin: 0px auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between
+}
+
+.testimonial .testimonials .person {
+    width: 370px;
+    height: 339px;
+    border-radius: 50px;
+    background-color: #ffffff;
+}
+
+.testimonial .testimonials .person .person-head {
+    padding-top: 53px;
+    padding-inline: 37px;
+}
+
+.testimonial .testimonials .person .person-head .person-did {
+    font-size: 25px;
+    letter-spacing: 1%;
+    color: #292f36;
+    line-height: 150%;
+}
+
+.testimonial .testimonials .person .person-head .person-lil {
+    font-size: 18px;
+    line-height: 150%;
+    letter-spacing: 1%;
+    font-family: 'Jost';
+    color: #4d5053;
+}
+
+.testimonial .testimonials .person .person-head p {
+    position: relative;
+    left: 100px;
+    top: -75px;
+}
+
+.testimonial .testimonials .person .person-head img {
+    border-radius: 100%;
+}
+
+.testimonial .testimonials .person .person-footer {
+    font-size: 22px;
+    line-height: 150%;
+    letter-spacing: 1%;
+    color: #4d5053;
+    font-family: 'Jost';
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    position: relative;
+    top: -40px;
+}
+
+.client-logo {
+    width: 1090.39px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: auto;
+    padding-bottom: 150.68px;
+}
+
+.project {
+    width: 1201px;
+    margin: auto;
+    padding-bottom: 150px;
+}
+
+.project .project-head {
+    text-align: center;
+}
+
+.project .project-head .project-head-big {
+    font-size: 50px;
+    line-height: 125%;
+    letter-spacing: 2%;
+    color: #292f36;
+    padding-bottom: 20px;
+    font-family: 'DM Serif Display';
+}
+
+.project .project-head .project-head-lil {
+    font-size: 22px;
+    line-height: 150%;
+    letter-spacing: 1%;
+    font-family: 'Jost';
+    color: #4d5053;
+    padding-bottom: 93px;
+}
+
+.projects {
+    width: 1201px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(500px,4fr));
+    gap: 150px;
+}
+
+.projects .projects-content {
+    width: 525px;
+}
+
+.projects .projects-content .pro-con-img {
+    border-radius: 0 80px 0 0;
+    width: 100%;
+}
+
+.projects .projects-content .pro-con-img-2 {
+    border-radius: 80px 0 0 0 ;
+}
+
+.projects .projects-content .pro-con-img-3 {
+    border-radius: 0 0 80px 0;
+}
+
+.projects .projects-content .pro-con-img-4 {
+    border-radius: 0 0 0 80px;
+}
+
+.projects .projects-content .pro-text {
+    width: 525px;
+    padding-top: 28px;
+    position: relative;
+}
+
+.projects .projects-content .pro-text .pro-text-did {
+    font-size: 25px;
+    line-height: 125%;
+    letter-spacing: 2%;
+    color: #292f36;
+}
+
+.projects .projects-content .pro-text .pro-text-lil {
+    font-size: 22px;
+    line-height: 150%;
+    letter-spacing: 1%;
+    color: #4d5053;
+    font-family: 'jost';
+}
+
+.projects .projects-content .pro-text a {
+    width: 60px;
+    position: absolute;
+    right: 10px;
+    top: 20px;
+}
+
+.counter {
+    width: 100%;
+    height: 420px;
+    background-color: #f4f0ec;
+}
+
+.counter .counters {
+    width: 1082px;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-block: 151px;
+}
+
+.counter .counters .stick {
+    width: 2px;
+    height: 130px;
+    background-color: #CDA274;
+}
+
+.counter .counters .counters-section {
+    width: 192px;
+    text-align: center;
+    align-items: center;
+}
+
+.counter .counters .counters-section .counters-text-did {
+    font-size: 85px;
+    color: #CDA274;
+    line-height: 125%;
+    letter-spacing: 2%;
+}
+
+.counter .counters .counters-section .counters-text-lil {
+    font-size: 22px;
+    color: #4d5053;
+    line-height: 150%;
+    letter-spacing: 1%;
+    font-family: 'jost';
+    
+}
+
+.blog {
+    width: 1200px;
+    margin: auto;
+    padding-block: 200px;
+}
+
+.blog .blog-head {
+    text-align: center;
+    padding-bottom: 52px;
+}
+
+.blog .blog-head .blog-head-did {
+    font-size: 50px;
+    line-height: 125%;
+    letter-spacing: 2%;
+    color: #292f36;
+    padding-bottom: 15px;
+}
+
+.blog .blog-head .blog-head-lil {
+    font-size: 22px;
+    line-height: 150%;
+    letter-spacing: 1%;
+    color: #4d5053;
+    font-family: 'jost';
+}
+
+.blog .blogs {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.blog .blogs .blog-section {
+    width: 382px;
+    height: 521px;
+    border: 1px solid #e7e7e7;
+    border-radius: 62px;
+    transition: 0.3s;
+}
+
+.blog .blogs .blog-section:hover {
+    background-color: #f4f0ec;
+    transition: 0.3s;
+}
+
+.blog .blogs .blog-section:hover .date img {
+    display: none;
+    transition: 0.3s;
+}
+
+.blog .blogs .blog-section:hover .date .hover-img {
+    display: block;
+    transition: 0.3s;
+}
+
+.blog .blogs .blog-section .blog-img {
+    border-radius: 62px 62px 0 0;
+    padding: 21px;
+}
+
+.blog .blogs .blog-section .sub-content .sub-text {
+    font-size: 25px;
+    line-height: 125%;
+    letter-spacing: 2%;
+    color: #292f36;
+    padding-left: 21px;
+}
+
+.blog .blogs .blog-section .date {
+    width: 360px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-left: 21px;
+    padding-top: 10px;
+    justify-content: space-between;
+}
+
+.blog .blogs .blog-section .date p {
+    line-height: 150%;
+    letter-spacing: 1%;
+    color: #4d5053;
+    font-family: 'jost';
+}
+
+.blog .blogs .blog-section .date img {
+    width: 50px;
+    transition: 0.3s;
+}
+
+.blog .blogs .blog-section .date .hover-img {
+    display: none;
+    transition: 0.3s;
+}
+
+.contact {
+    width: 1199px;
+    background-color: #292f36;
+    margin: auto;
+    border-radius: 70px;
+}
+
+.contact .contact-text {
+    width: 569px;
+    text-align: center;
+    margin: auto;
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+
+.contact .contact-text .contact-text-did {
+    font-size: 50px;
+    line-height: 125%;
+    color: #ffffff;
+}
+
+.contact .contact-text .contact-text-lil {
+    font-size: 22px;
+    line-height: 150%;
+    letter-spacing: 1%;
+    color: #ffffff;
+    font-family: 'jost';
+    padding-top: 20px;
+    padding-bottom: 32px;
+}
+
+.contact .btn {
+    color: #ffffff;
+    padding: 26px 37px;
+    background-color: #CDA274;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    width: 200px;
+    font-size: 18px;
+    line-height: 125%;
+    letter-spacing: 2%;
+    font-family: 'jost';
+    border-radius: 18px;
+    margin: auto;
+    box-shadow: 0 10px 20px 2px #0000008e;
+}
+
+.contact .btn img {
+    padding-left: 15px;
 }
