--- a/style/style.css
+++ b/style/style.css
@@ -1312,3 +1312,183 @@ textarea::placeholder {
     line-height: 120%;
     color: #292f36;
 }
+
+
+
+
+
+
+
+
+
+
+
+.contact-form {
+    width: 1201px;
+    height: 724px;
+    margin: auto;
+    text-align: center;
+    position: relative;
+}
+
+.contact-form-head {
+    font-size: 50px;
+    line-height: 150%;
+    letter-spacing: 1%;
+    color: #292f36;
+    position: relative;
+    margin-bottom: 150px;
+}
+
+.contact-form-main {
+    width: 349px;
+    background-color: #F4F0EC;
+    height: 436.99px;
+    padding-left: 32px;
+    padding-top: 76px;
+    border-radius: 50px;
+    position: relative;
+    bottom: 75px;
+    margin-bottom: 150px;
+}
+
+.contact-form-details p {
+    align-items: center;    
+    display: flex;
+    margin-bottom: 30px;
+    font-size: 20px;
+    font-family: 'jost';
+    line-height: 150%;
+    letter-spacing: 1%;
+    color: #4d5053;
+}
+
+.contact-form-details p img {
+    margin-right: 15px;
+}
+
+.contact-form-social ul {
+    width: 146.46px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.contact-form-social ul a {
+    font-size: 18px;
+    line-height: 120%;
+    color: #292f36;
+}
+
+.contact-mailbox {
+    right: 0;
+    bottom: 0;
+    text-align: center;
+    width: 797px;
+    position: absolute;
+}
+
+.contact-input {
+    width: 796px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.contact-input-2 {
+    width: 796px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.contact-input input, .contact-input-2 input {
+    border: none;
+    border-bottom: 3px solid #000000;
+    width: 378px;
+    height: 45px;
+    color: #4d5053;
+    padding-inline: 10px;
+    font-size: 22px;
+    line-height: 150%;
+    letter-spacing: 1%;
+    color: #4d5053;
+    font-family: 'jost';
+}
+
+.contact-input-2 input {
+    margin-top: 50px;
+}
+
+.contact-input input::placeholder {
+    font-size: 22px;
+    line-height: 150%;
+    letter-spacing: 1%;
+    color: #4d5053;
+    font-family: 'jost';
+}
+
+.contact-input input::placeholder, .contact-input-2 input::placeholder {
+    font-size: 22px;
+    line-height: 150%;
+    letter-spacing: 1%;
+    color: #4d5053;
+    font-family: 'jost';
+}
+
+.contact-mailbox textarea {
+    border: none;
+    border-bottom: 3px solid #000000;
+    resize: none;
+    width: 100%;
+    height: 175px;
+    margin-top: 57px;
+    color: #4d5053;
+    padding-inline: 10px;
+    font-size: 22px;
+    line-height: 150%;
+    letter-spacing: 1%;
+    color: #4d5053;
+    font-family: 'jost';
+}
+
+.contact-mailbox textarea::placeholder {
+    font-size: 22px;
+    line-height: 150%;
+    letter-spacing: 1%;
+    color: #4d5053;
+    font-family: 'jost';
+}
+
+.contact-btn {
+    font-size: 18px;
+    color: #ffffff;
+    line-height: 125%;
+    letter-spacing: 2%;
+    font-family: 'jost';
+    border-radius: 18px;
+    padding-block: 26px;
+    padding-inline: 54px;
+    background-color: #292f36;
+    transition: 0.3s;
+    margin-top: 58px;
+    border: none;
+    position: relative;
+    left: 290px;
+}
+
+.contact-map {
+    margin: auto;
+    width: 1199px;
+    height: 501px;
+    margin-top: 150px;
+    border-radius: 50px;
+    margin-bottom: 169px;
+}
+
+.contact-map iframe {
+    width: 100%;
+    height: 100%;
+    border-radius: 50px;
+    filter: grayscale(50%) invert(92%) contrast(83%);
+}
